--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Asemblery 16/17\n
-Mateusz Szarek\n
-Student kierunku Informatyka\n
-Wydział Informatyki, Elektroniki i Telekomunikacji\n
-Akademia Górniczo Hutnicza im. S. Staszica w Krakowie\n
+Asemblery 16/17
+Mateusz Szarek
+Student kierunku Informatyka
+Wydział Informatyki, Elektroniki i Telekomunikacji
+Akademia Górniczo Hutnicza im. S. Staszica w Krakowie
